# go-cook

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yaml  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yaml
_snippets/experimental/: index.html
_snippets/kitchen-mode/: index.html
_snippets/original/: index.html
appetizers/: index.html
appetizers/barbys-hot-crab-dip/: index.html
appetizers/fried-eggplant-strips/: index.html
braises/: index.html
breads/: index.html
breakfast/: index.html
breakfast/flag-pancakes/: index.html
casseroles/: index.html
cookbook/: history.md  index.md
cookbook/_snippets/: experimental.md  original.md
cookbook/appetizers/: barbys-hot-crab-dip.md  fried-eggplant-strips.md  index.md
cookbook/braises/: index.md
cookbook/breads/: index.md
cookbook/breakfast/: flag-pancakes.md  index.md  pancakes.md
cookbook/casseroles/: index.md
cookbook/dinner/: index.md  moms_meatloaf.md
cookbook/dry-heat/: index.md
cookbook/experiments/: index.md  kohls-deli-german-potato-salad.md  welsh-chips-and-sauce.md
cookbook/ground-meats/: index.md  moms-meatloaf.md
cookbook/ground_meats/: index.md  moms_meatloaf.md
cookbook/js/: kitchen-mode.js
cookbook/lunch/: index.md  moms-sloppy-joes.md
cookbook/snippets/: kitchen-mode.md
dinner/: index.html
docs/: index.md
dry-heat/: index.html
experiments/: index.html
ground-meats/: index.html
history/: index.html
lunch/: index.html
search/: search_index.json
soups/: index.html
stylesheets/: recipe.css
(+14 files in other folders)
