[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "go-cook"
version = "0.1.0"
description = "A responsive static site cookbook"
readme = "docs/index.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

[dependency-groups]
dev = [
  "pip-audit>=2.9.0",
  "prek>=0.1.0",
  "rumdl>=0.0.66",
]

[tool.hatch.build.targets.wheel]
packages = ["docs"]
